# wip

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LLM_CONTEXT.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: wip-demo.mov
docs/: CONTEXT.md
src/wip/: __init__.py  cli.py  config.py  discovery.py  display.py  scanner.py  worklist.py
src/wip/llm/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  prompts.py  registry.py
